--- a/app/apps/main/templates/melding/melding_next.html
+++ b/app/apps/main/templates/melding/melding_next.html
@@ -4,8 +4,8 @@
        href="{{ next_melding_url }}"
        data-turbo-frame="overview"
        data-turbo-action="advance"
-       aria-label="{{ label }}">{% include "icons/arrow-right.svg" %}</a>
+       aria-label="{{ label }}">{% include "icons/arrow-right-v2.svg" %}</a>
 {% else %}
-    <span class="melding-navigatie" aria-label="{{ label }}">{% include "icons/arrow-right.svg" %}</span>
+    <span class="melding-navigatie" aria-label="{{ label }}">{% include "icons/arrow-right-v2.svg" %}</span>
 {% endif %}
 </turbo-frame>
