--- a/app/frontend/assets/styles/components/_incident-details-blocks.scss
+++ b/app/frontend/assets/styles/components/_incident-details-blocks.scss
@@ -35,7 +35,7 @@
 
     .container__status--content {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         position: relative;
         background-color: $white;
 
