fix: begraafplaats naam

--- a/app/apps/main/templates/melding/melding_detail_locaties.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties.html
@@ -8,7 +8,7 @@
             {% endif %}
         </h2>
         <div class="has-background--white">
-            {% include "melding/melding_detail_locaties_graven.html" with melding=melding locaties=locaties.graven only %}
+            {% include "melding/melding_detail_locaties_graven.html" with melding=melding locaties=locaties.graven BEGRAAFPLAATSEN_LOOKUP=BEGRAAFPLAATSEN_LOOKUP only %}
             {% include "melding/melding_detail_locaties_adressen.html" with melding=melding locaties=locaties.adressen perms=perms only %}
         </div>
     </div>
