--- a/app/apps/main/templates/melding/melding_detail_locaties_graf.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_graf.html
@@ -4,16 +4,7 @@
         <div>
             <dt>Begraafplaats</dt>
             <dd>
-                {% if melding.locaties_voor_melding.0.begraafplaats %}
-                    {% vind_in_dict melding.signalen_voor_melding.0.meta_uitgebreid.begraafplaats.choices melding.locaties_voor_melding.0.begraafplaats as signaal_begraafplaats_naam %}
-                    {% if signaal_begraafplaats_naam == melding.locaties_voor_melding.0.begraafplaats %}
-                        {% vind_in_dict melding.meta_uitgebreid.begraafplaats.choices melding.locaties_voor_melding.0.begraafplaats %}
-                    {% else %}
-                        {{ signaal_begraafplaats_naam }}
-                    {% endif %}
-                {% else %}
-                    -
-                {% endif %}
+                {% vind_in_dict BEGRAAFPLAATSEN_LOOKUP melding.locaties_voor_melding.0.begraafplaats "-" %}
             </dd>
         </div>
         <div>
