--- a/app/frontend/assets/styles/components/_page-beheer.scss
+++ b/app/frontend/assets/styles/components/_page-beheer.scss
@@ -10,7 +10,7 @@
     }
 
     @media (min-width: map-get($grid-breakpoints, lg)) {
-        padding: 2rem 0 4rem;
+        padding: 0 0 4rem;
     }
 
     a.link--back {
