--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -364,7 +364,7 @@ textarea {
             height: 16px;
             transform: rotate(-180deg);
             transform-origin: 65% 45%;
-            vertical-align: middle;
+            vertical-align: text-top;
         }
 
         &.show {
