--- a/app/frontend/assets/styles/components/_incident-details-blocks.scss
+++ b/app/frontend/assets/styles/components/_incident-details-blocks.scss
@@ -305,6 +305,10 @@
                     line-height: 1rem;
                     word-break: break-word;
                 }
+
+                h4 {
+                    margin-bottom: 0.25rem;
+                }
                 .help-text {
                     white-space: normal;
                     font-size: $fz-14;
