--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -205,6 +205,7 @@
                     </details>
                 {% endwith %}
             {% endfor %}
+            {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam not in "afgehandeld, geannuleerd, pauze, wachten_melder" %}
             <div class="container__aanmaken {% if taken.niet_verwijderde_taken|length == 0 %}bgc-white{% endif %}">
             {% if taken.niet_verwijderde_taken|length == 0 %}
                 {% if melding.status.naam == 'afgehandeld' %}
@@ -213,7 +214,7 @@
                     <span class="help-text">Er zijn nog geen taken aangemaakt</small></span>
                 {% endif %}
             {% endif %}
-            {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+            {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam not in "afgehandeld, geannuleerd, pauze, wachten_melder" %}
                 <button class="btn btn-tertiary"
                         data-action="modal#openModal"
                         data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}"
@@ -230,6 +231,7 @@
                 </button>
             {% endif %}
             </div>
+            {% endif %}
         </div>
     </div>
 </section>
