--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -1,4 +1,5 @@
 .container__logboek {
+    interpolate-size: allow-keywords;
     padding: 1rem;
     ul {
         margin-top: 0;
@@ -54,7 +55,7 @@
 
                 &.has-overflow {
                     margin-right: 1em;
-                    padding-right: 1.6em;
+                    padding-right: 2em;
                     box-sizing: border-box;
                     svg {
                         display: block;
@@ -67,8 +68,7 @@
                     padding: 0 1.35em 0 0;
                     .content__overflow {
                         -webkit-line-clamp: unset;
-                        max-height: 20em;
-                        // padding: 0.25em 1.35em 0.25em 0.25em;
+                        max-height: 120em;
                     }
                     svg {
                         transform: rotate(-90deg);
