--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -63,18 +63,13 @@
 
     .wrapper--actions {
         box-sizing: border-box;
-    }
-
-    .wrapper--actions {
-        padding: 1em 0 0;
-        margin-top: 10px;
 
         .container__uitklapper {
             width: 48px;
             height: 48px;
             display: inline-block;
             cursor: pointer;
-            margin-right: 12px;
+            margin-right: 120px;
             position: relative;
             z-index: 20;
 
@@ -121,6 +116,12 @@
             &:popover-open {
                 display: block;
                 inset: auto;
+            }
+        }
+
+        &:has(> button) {
+            .container__uitklapper {
+                margin-right: 12px;
             }
         }
     }
