--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -158,6 +158,7 @@
 
         .wrapper--actions {
             width: 100%;
+            transform: translateY(-5px);
         }
 
         .nav--small & {
