--- a/app/frontend/assets/styles/components/_pagination.scss
+++ b/app/frontend/assets/styles/components/_pagination.scss
@@ -56,19 +56,22 @@
         ul {
             li {
                 margin-right: 0;
-                width: 32px;
                 height: 32px;
                 text-align: center;
                 line-height: 32px;
                 position: relative;
+                width: auto;
+                display: block;
 
                 label {
                     font-weight: 400;
                     font-size: 16px;
                     display: block;
-                    width: 32px;
+                    min-width: 32px;
                     cursor: pointer;
-                    padding-left: 0;
+                    padding: 0 6px;
+                    box-sizing: border-box;
+                    word-break: normal;
 
                     &:hover,
                     &:has(input:checked) {
