--- a/app/apps/beheer/templates/beheer/synchronisatie/taakopdrachten_lijst.html
+++ b/app/apps/beheer/templates/beheer/synchronisatie/taakopdrachten_lijst.html
@@ -35,7 +35,7 @@
                     </div>
                 </form>
                 <form action="{% url 'syncronisatie_taakopdrachten' %}" method="post" data-turbo="false">
-                    <h4>Totaal aantal: {{ count }}</h4>
+                    <h4>Aantal: {% if count > 100 %}100/{% endif%}{{ count }}</h4>
                     {% csrf_token %}
                     {{ form }}
 
@@ -66,7 +66,7 @@
                             </svg>
                         </span>
                         <div>
-                            <p>Alle taken zijn, of worden op dit moment aangamaakt</p>
+                            <p>Alle taken zijn, of worden op dit moment aangemaakt</p>
                         </div>
                     </div>
                 {% endif %}
