--- a/app/apps/beheer/templates/beheer/taakopdrachten_taak_aanmaken_issues/taakopdrachten_lijst.html
+++ b/app/apps/beheer/templates/beheer/taakopdrachten_taak_aanmaken_issues/taakopdrachten_lijst.html
@@ -12,7 +12,7 @@
 {% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
-    <div class="page__beheer" data-controller="row-search">
+    <div class="page__beheer">
         <div>
             <a href="{% url 'beheer' %}" class="link--back" data-turbo-frame="_top">
                 {% include "icons/arrow-short.svg" %}
@@ -25,20 +25,32 @@
         <p>Op deze pagina staat een overzicht van taken die vermoedelijk <strong>niet</strong> zijn aangemaakt in de taakapplicatie</p>
         <div class="grid-container grid-container--4-1">
             <div class="grid-item">
-                {% if count > 0 %}
-                <form>
-                    <div class="form-row">
-                        <label for="id_zoeken">Zoeken</label>
-                        <div>
-                            <input type="text" id="id_zoeken" name="zoeken" class="form-control " data-action="row-search#search">
-                        </div>
-                    </div>
-                </form>
-                <form action="{% url 'syncronisatie_taakopdrachten' %}" method="post" data-turbo="false">
-                    <h4>Aantal: {% if count > 100 %}100/{% endif%}{{ count }}</h4>
+                <form action="{% url 'taakopdrachten_taak_aanmaken_issues' %}" method="post" data-turbo="false">
+                    <h4>Aantal: {% if form.page.field.choices|length > 1 %}{{ view.page_size }}/{% endif%}{{ count }}</h4>
                     {% csrf_token %}
-                    {{ form }}
+                    {{ form.q.label_tag }}
+                    {{ form.q }}
 
+                    {% if count <= 0 %}
+                        <div class="alert alert--warning">
+                            <span>
+                                <svg width="32"
+                                        height="32"
+                                        viewBox="0 0 32 32"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600" />
+                                </svg>
+                            </span>
+                            <div>
+                                <p>Alle taken zijn, of worden op dit moment aangemaakt</p>
+                            </div>
+                        </div>
+                    {% endif %}
+                    {{ form.taakopdrachten }}
+                    {% if form.page.field.choices|length > 1 %}
+                    {{ form.page }}
+                    {% endif %}
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
                             <button type="reset"
@@ -53,23 +65,7 @@
                             </button>
                         </div>
                     </div>
-                <form>
-                {% else %}
-                    <div class="alert alert--warning">
-                        <span>
-                            <svg width="32"
-                                    height="32"
-                                    viewBox="0 0 32 32"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600" />
-                            </svg>
-                        </span>
-                        <div>
-                            <p>Alle taken zijn, of worden op dit moment aangemaakt</p>
-                        </div>
-                    </div>
-                {% endif %}
+                </form>
             </div>
         </div>
     </div>
