--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -20,12 +20,12 @@
                         <div>Verantwoordelijke afdeling</div>
                         <div>Opmerking</div>
                     </li>
-                    {% for taaktype_form in form %}
+                    {% comment %} {% for taaktype_form in form %}
                         <li data-taaktype-url="{{ taaktype_form.value }}"
                             data-taken-aanmaken--manager-target="geselecteerdFormulierTaaktype">
                             {{ taaktype_form }}
                         </li>
-                    {% endfor %}
+                    {% endfor %} {% endcomment %}
                 </ul>
             </div>
             <div class="form-row btn-row">
