--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -20,22 +20,15 @@
                         <div>Verantwoordelijke afdeling</div>
                         <div>Opmerking</div>
                     </li>
-                    {% comment %} {% for taaktype_form in form %}
+                    {% for taaktype_form in form %}
                         <li data-taaktype-url="{{ taaktype_form.value }}"
                             data-taken-aanmaken--manager-target="geselecteerdFormulierTaaktype">
                             {{ taaktype_form }}
                         </li>
-                    {% endfor %} {% endcomment %}
+                    {% endfor %}
                 </ul>
             </div>
-            <div class="form-row btn-row">
-                {% comment %} <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal" data-modal-target="modal">
-                    <span>Annuleren</span>
-                </button> {% endcomment %}
-                {% comment %} <button type="submit" class="btn btn-action">
-                    <span>Aanmaken</span>
-                </button> {% endcomment %}
-            </div>
+            <div class="form-row btn-row"></div>
         </form>
     {% else %}
         <div data-modal-target="modalSluiten"></div>
