--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -21,8 +21,7 @@
                         <div>Opmerking</div>
                     </li>
                     {% for taaktype_form in form %}
-                        <li data-taaktype-url="{{ taaktype_form.value }}"
-                            data-taken-aanmaken--manager-target="geselecteerdFormulierTaaktype">
+                        <li data-taken-aanmaken--manager-target="geselecteerdFormulierTaaktype">
                             {{ taaktype_form }}
                         </li>
                     {% endfor %}
