taak aanmaken issues permission

--- a/app/apps/beheer/templates/beheer/beheer.html
+++ b/app/apps/beheer/templates/beheer/beheer.html
@@ -33,9 +33,11 @@
         <li>
             <a href="{% url 'release_note_lijst' %}" class="btn btn-tertiary"><span>Berichten</span></a>
         </li>
+        {% if perms.authorisatie.taakopdrachten_taak_aanmaken_issue_lijst_bekijken %}
         <li>
             <a href="{% url 'taakopdrachten_taak_aanmaken_issues' %}" class="btn btn-tertiary"><span>Niet aangemaakte taken</span></a>
         </li>
+        {% endif %}
     </ul>
     </turbo-frame>
 {% endblock body %}
