--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -120,24 +120,11 @@
                             </div>
                         </form>
                     </div>
-                    <!-- geselecteerde taaktypes aanvullen met interne opmerking -->
                     <div data-taken-aanmaken--manager-target="stap2"
                          class="stap2"
                          id="taken_aanmaken_form">
                         {% include "melding/detail/taken_aanmaken_form.html" with form=form view=view disable_stream=True %}
                     </div>
-                    {% comment %} {% csrf_token %}
-                            {{ form.urgentie }}
-                            <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
-                            <div class="form-row btn-row"></div>
-                            <div class="form-row btn-row">
-                                <button type="reset" class="btn btn-tertiary" data-controller="detail" data-action="modal#closeModal" data-modal-target="modal">
-                                    <span>Annuleren</span>
-                                </button>
-                                <button type="submit" class="btn btn-action">
-                                    <span>{{ form.submit_label }}</span>
-                                </button>
-                    </div> {% endcomment %}
                 </div>
             </section>
         </div>
@@ -194,6 +181,11 @@
                     <div>
                         <span class="cta--summary">Opmerking toevoegen</span>
                         <button role="button"
+                                class="btn--clean"
+                                data-action="taken-aanmaken--manager#taaktypeAfhankelijkheidHandler:prevent">
+                            {% include "icons/arrow-double.svg" %}
+                        </button>
+                        <button role="button"
                                 class="btn--clean btn--remove"
                                 data-action="taken-aanmaken--manager#taaktypeVerwijderenHandler:prevent">
                             {% include "icons/bin.svg" %}
@@ -241,6 +233,14 @@
                                name="form-0-gebruiker"
                                id="id_form-0-gebruiker"
                                value="admin@admin.com">
+                        <input type="hidden"
+                               name="form-0-uuid"
+                               id="id_form-0-uuid"
+                               value="">
+                        <input type="hidden"
+                               name="form-0-afhankelijkheid"
+                               id="id_form-0-afhankelijkheid"
+                               value="">
                     </div>
                 </div>
             </details>
