--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -19,6 +19,8 @@
                         <div>Taak</div>
                         <div>Verantwoordelijke afdeling</div>
                         <div>Opmerking</div>
+                        <div>Status</div>
+                        <div>Opties</div>
                     </li>
                     {% for taaktype_form in form %}
                         <li data-taken-aanmaken--manager-target="geselecteerdFormulierTaaktype">
